fix img stretch on phone maybe?

--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ div.lightModeButt{
 
 .center {
   max-width: 40%;
-  height: 40%;
+  /* height: 40%; */
 }
 
 /* form {
